[workspace]
resolver = "2"

members = [
    "support/efm32gg11b-pac",
]

[workspace.dependencies]
bare-metal = "1.0.0"
vcell = "0.1.0"
portable-atomic = { version = "1", default-features = false, features = ["critical-section"]}

embedded-hal = { version = "0.2", features = ["unproven"] }
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1"
defmt = "0.3"
defmt-rtt = "0.4"

efm32gg11b-pac = { path = "support/efm32gg11b-pac" }
