[workspace]
resolver = "2"

members = [
    "demos/blink",
    "demos/blink-systick",
    "demos/blink-pb",
    "demos/adc-temp",
    "demos/lcd-hello",
    "demos/lcd-counter",
    "demos/stopwatch",
    "demos/usb-cdc",
    "support/efm32gg11b-pac",
    "support/efm32gg11b-usb",
    "support/slstk3701a",
]

[workspace.dependencies]
vcell = "0.1.0"
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

panic-halt = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1"
defmt = "1"
defmt-rtt = "0.4"

efm32gg11b-pac = { path = "support/efm32gg11b-pac" }
efm32gg11b-usb = { path = "support/efm32gg11b-usb" }
slstk3701a = { path = "support/slstk3701a" }
