[package]
name = "efm32gg11b-pac"
version = "0.2.0"
authors = ["kromych <kromych@users.noreply.github.com>"]
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "efm32gg11b", "pac"]
description = "Peripheral Access Crate for EFM32GG11B series MCU from Silicon Labs"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
vcell.workspace = true
portable-atomic.workspace = true

[features]
critical-section = []
rt = []
portable-atomics = []
default = ["critical-section", "rt", "portable-atomics"]
